jellyfin/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        kubernetes.io/hostname: raspberrypi
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-pvc-config
        - name: jellyfin-data
          persistentVolumeClaim:
            claimName: jellyfin-pvc-data
      containers:
        - env:
            - name: PGID
              value: "1000" # < ASCII code for '65541'
            - name: PUID
              value: "1000" #< ACII code for '1044'
            - name: TZ
              value: Europe/Vienna
          securityContext:
            privileged: true # Container must run as privileged inside of the pod, required for hardware acceleration
          image: ghcr.io/linuxserver/jellyfin:10.10.7
          imagePullPolicy: Always
          name: jellyfin
          ports:
            - containerPort: 8096
              name: http-tcp
              protocol: TCP
            - containerPort: 8920
              name: https-tcp
              protocol: TCP
            - containerPort: 1900
              name: dlna-udp
              protocol: UDP
            - containerPort: 7359
              name: discovery-udp
              protocol: UDP
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /config
              name: jellyfin-config
            - mountPath: /data
              name: jellyfin-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
